fix tabbar overflow

--- a/packages/graphiql-react/src/ui/tabs.css
+++ b/packages/graphiql-react/src/ui/tabs.css
@@ -1,6 +1,6 @@
 .graphiql-tabs {
   display: flex;
-  overflow-y: auto;
+  overflow-x: auto;
   padding: var(--px-12);
 
   & > :not(:first-child) {
